--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawerLayout"
+    android:background="#FBFBFB"
     android:fitsSystemWindows="true"
-    android:background="#F7FFFFFF"
     android:minWidth="19dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,9 +14,10 @@
         android:layout_height="match_parent">
 
         <ScrollView
-            android:layout_width="409dp"
-            android:layout_height="97dp"
-            android:background="#F7FFFFFF"
+            android:id="@+id/scrollView2"
+            android:layout_width="410dp"
+            android:layout_height="67dp"
+            android:background="#FBFBFB"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.043"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#F7FFFFFF"
+                    android:background="#FFFFFF"
                     app:subtitleTextColor="#0A0A0A"
                     app:titleTextColor="#111111" />
 
@@ -56,6 +56,46 @@
             android:foreground="@mipmap/icono3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="325dp"
+            android:layout_height="160dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="40dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView15"
+            app:srcCompat="@mipmap/hb" />
+
+        <ImageView
+            android:id="@+id/imageView12"
+            android:layout_width="324dp"
+            android:layout_height="156dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="40dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView11"
+            app:srcCompat="@mipmap/pizzas" />
+
+        <ImageView
+            android:id="@+id/imageView13"
+            android:layout_width="319dp"
+            android:layout_height="161dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="44dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView12"
+            app:srcCompat="@mipmap/postres" />
+
+        <ImageView
+            android:id="@+id/imageView15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="144dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+            app:srcCompat="@mipmap/rapifood" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
