--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,26 @@
     android:gravity="center_vertical"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="339dp"
+        android:layout_height="221dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="540dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@mipmap/fondorojo" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="262dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="84dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/lettering" />
+
     <Button
         android:id="@+id/login_g"
         android:layout_width="65dp"
@@ -71,8 +91,8 @@
 
     <Button
         android:id="@+id/login"
-        android:layout_width="357dp"
-        android:layout_height="46dp"
+        android:layout_width="290dp"
+        android:layout_height="47dp"
         android:backgroundTint="#fff"
         android:text="Iniciar sesion "
         android:textAllCaps="false"
@@ -102,19 +122,6 @@
         android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="RapiFood SV"
-        android:fontFamily="sans-serif-black"
-        android:textColor="#F3EEEE"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
