--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -8,6 +8,14 @@
     android:gravity="center_vertical"
     tools:context=".RegistrationActivity">
 
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="309dp"
+        android:layout_height="171dp"
+        app:srcCompat="@mipmap/fondorojo"
+        tools:layout_editor_absoluteX="-1dp"
+        tools:layout_editor_absoluteY="-14dp" />
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
