--- a/app/src/main/res/layout/splash_rfsv.xml
+++ b/app/src/main/res/layout/splash_rfsv.xml
@@ -6,27 +6,35 @@
     android:layout_height="match_parent"
     android:background="#F15150">
 
-    <TextView
-        android:id="@+id/textView2"
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="406dp"
+        android:layout_height="195dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="536dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@mipmap/fondorojo" />
+
+    <ImageView
+        android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="92dp"
-        android:fontFamily="sans-serif-black"
-        android:text="RapiFood SV"
-        android:textColor="#Ffffff"
-        android:textSize="40sp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/lettering" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="242dp"
         android:layout_height="224dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="84dp"
+        android:layout_marginBottom="284dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.597"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/icono2" />
 
     <ProgressBar
@@ -34,12 +42,12 @@
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="180dp"
+        android:layout_marginTop="84dp"
         android:progressBackgroundTint="#FFFFFF"
         android:progressTint="#FFFFFF"
         android:secondaryProgressTint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
 
