cambios en registro
Le cambie el progressbar, por progress dialog. Ya que estaba dando error a la hora de registrar por correo. Y tambien le agregue un permiso al Manifest.

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -50,7 +50,7 @@
         android:layout_marginEnd="52dp"
         android:backgroundTint="#FFFFFF"
         android:foregroundTint="#FFFFFF"
-        android:hint="Contraseña"
+        android:hint="Contraseña (6 digitos)"
         android:inputType="textPassword"
         android:shadowColor="#FFFFFF"
         android:textColor="#FFFFFF"
