--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,19 +29,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/lettering" />
 
-    <Button
+
+    <com.google.android.gms.common.SignInButton
         android:id="@+id/login_g"
-        android:layout_width="65dp"
-        android:layout_height="66dp"
-        android:layout_marginBottom="92dp"
-        android:backgroundTint="@color/white"
-        android:foreground="@mipmap/google"
-        android:textAllCaps="false"
-        android:textColor="#fff"
-        app:iconTint="#FFFFFF"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_centerInParent="true"
+        android:layout_margin="16dp"
+        android:layout_marginTop="250dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <EditText
         android:id="@+id/password"
