--- a/app/src/main/res/layout/activity_hamburguersas.xml
+++ b/app/src/main/res/layout/activity_hamburguersas.xml
@@ -6,24 +6,46 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
+        android:layout_height="284dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView17"
-            android:layout_width="match_parent"
-            android:layout_height="138dp"
+            android:id="@+id/imageView16"
+            android:layout_width="434dp"
+            android:layout_height="212dp"
             app:srcCompat="@mipmap/hamburger" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <TextView
-            android:id="@+id/textView6"
-            android:layout_width="399dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_width="405dp"
+            android:layout_height="65dp"
             android:text="@string/hamburguerleyend" />
+
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="411dp"
+        android:layout_height="376dp"
+        android:layout_marginTop="277dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout2">
+
+        <ListView
+            android:id="@+id/ListaHamburger"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:padding="3dp"
+            android:scrollbars="horizontal|vertical">
+
+        </ListView>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
