--- a/app/src/main/res/layout/activity_pizza.xml
+++ b/app/src/main/res/layout/activity_pizza.xml
@@ -28,4 +28,24 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="411dp"
+        android:layout_height="376dp"
+        android:layout_marginTop="277dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout2">
+
+        <ListView
+            android:id="@+id/ListaPizzas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:padding="3dp"
+            android:scrollbars="horizontal|vertical">
+
+        </ListView>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
