--- a/app/src/main/res/layout/activity_adaptador_vista.xml
+++ b/app/src/main/res/layout/activity_adaptador_vista.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -21,8 +21,8 @@
             android:src="@mipmap/ic_launcher" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_width="341dp"
+            android:layout_height="196dp"
             android:orientation="vertical">
 
             <!--<TextView
@@ -83,10 +83,6 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Agregar" />
+
 
 </LinearLayout>
