--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -17,6 +17,27 @@
         android:backgroundTint="#F44336"
         android:text="Pagar ahora" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="396dp"
+        android:layout_marginTop="100dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout2">
+
+        <ListView
+            android:id="@+id/ListaCarro"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:padding="3dp"
+            android:scrollbars="horizontal|vertical">
+
+        </ListView>
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="142dp"
@@ -24,9 +45,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="117dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="137dp"
         android:text="Carrito de compras " />
 
     <TextView
@@ -42,7 +63,7 @@
         android:text="Total pagar:" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txTotalPrecio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -51,42 +72,6 @@
         android:layout_marginBottom="88dp"
         android:text="$0.00"
         android:textColor="#26A32B" />
-
-    <TextView
-        android:id="@+id/txt_Platillo"
-        android:layout_width="240dp"
-        android:layout_height="52dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="498dp"
-        android:text="Platillo :" />
-
-    <TextView
-        android:id="@+id/txt_Ingrediente"
-        android:layout_width="240dp"
-        android:layout_height="52dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="141dp"
-        android:layout_marginBottom="438dp"
-        android:text="Ingrediente" />
-
-    <TextView
-        android:id="@+id/txt_Cantidad"
-        android:layout_width="240dp"
-        android:layout_height="52dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="379dp"
-        android:text="Cantidad" />
 
 
 </RelativeLayout>
