--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -9,7 +9,7 @@
         </item>
         <item android:id="@+id/nav_pedidos"
             android:icon="@drawable/ic_baseline_fastfood_24"
-            android:title="Pedidos">
+            android:title="Historial de Pedidos">
         </item>
         <item android:id="@+id/nav_carrito"
             android:icon="@drawable/ic_baseline_shopping_cart_24"
