--- a/app/src/main/res/layout/activity_hamburguersas.xml
+++ b/app/src/main/res/layout/activity_hamburguersas.xml
@@ -43,9 +43,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:padding="3dp"
-            android:scrollbars="horizontal|vertical">
-
-        </ListView>
+            android:scrollbars="horizontal|vertical"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
