--- a/app/src/main/res/layout/activity_add_producto.xml
+++ b/app/src/main/res/layout/activity_add_producto.xml
@@ -76,7 +76,8 @@
             android:id="@+id/edtPrecio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Precio" />
+            android:hint="Precio"
+            android:numeric="decimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
